--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"**/*.tsx",
 		".expo/types/**/*.ts",
 		"expo-env.d.ts",
-		"app/index.jsx"
+		"app/index.tsx",
+		"contexts/AuthContext.tsx"
 	]
 }
